--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "cd .. && npm run build && mv dist server/"
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "axios": "^1.7.7",
